New stuffs for this task

--- a/_data/t.yml
+++ b/_data/t.yml
@@ -197,3 +197,24 @@ LastUpdateDate:
 FormatDate:
   en: "%m/%d/%Y"
   it: "%d/%m/%Y"
+SpeseDelTeam:
+  en: "Spese Team per la Trasformazione Digitale"
+  it: "Spese Team per la Trasformazione Digitale"
+TipologiaSpesa:
+  en: "Tipologia di spesa per macroarea"
+  it: "Tipologia di spesa per macroarea"
+TotaleSpesa:
+  en: "Totale"
+  it: "Totale"
+ImpegnoSpesa:
+  en: "Impegno iva inclusa"
+  it: "Impegno iva inclusa"
+PagamentiSpesa:
+  en: "Pagamenti"
+  it: "Pagamenti"
+SpeseAnalitiche:
+  en: "Spese analitiche"
+  it: "Spese analitiche"
+Contraccordi:
+  en: "Contratto/accordo"
+  it: "Contratto/accordo"
