Updated the correct label for "SpeseAnalitiche"

--- a/_data/t.yml
+++ b/_data/t.yml
@@ -213,8 +213,8 @@ PagamentiSpesa:
   en: "Pagamenti"
   it: "Pagamenti"
 SpeseAnalitiche:
-  en: "Spese analitiche"
-  it: "Spese analitiche"
+  en: "Descrizione analitica dei contratti/accordi di maggiore rilievo"
+  it: "Descrizione analitica dei contratti/accordi di maggiore rilievo"
 Contraccordi:
   en: "Contratto/accordo"
   it: "Contratto/accordo"
